WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135329
Don't rely on reading applicationState from within DidEnterBackground/WillEnterForeground
https://bugs.webkit.org/show_bug.cgi?id=135329
Summary
Don't rely on reading applicationState from within DidEnterBackground/WillEnt...
Gavin Barraclough
Reported
2014-07-27 16:02:52 PDT
API may not be stable.
Attachments
Fix
(6.19 KB, patch)
2014-07-27 16:09 PDT
,
Gavin Barraclough
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2014-07-27 16:09:17 PDT
Created
attachment 235584
[details]
Fix Basic browsing seems to work.
Sam Weinig
Comment 2
2014-07-27 16:18:46 PDT
Comment on
attachment 235584
[details]
Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=235584&action=review
I'm not clear if this makes sense to be on the WKContentView. I believe there are some PDF related issues with that. I need to check with Tim/Andy.
> Source/WebKit2/UIProcess/ios/WKContentView.mm:514 > + _isBackground = TRUE;
This should be YES.
> Source/WebKit2/UIProcess/ios/WKContentView.mm:520 > + _isBackground = FALSE;
This should be NO.
Sam Weinig
Comment 3
2014-07-27 16:23:17 PDT
Comment on
attachment 235584
[details]
Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=235584&action=review
> Source/WebKit2/UIProcess/ios/ProcessAssertionIOS.mm:106 > + _appIsBackground = FALSE;
Please use NO.
> Source/WebKit2/UIProcess/ios/ProcessAssertionIOS.mm:112 > + _appIsBackground = TRUE;
Please use YES.
Sam Weinig
Comment 4
2014-07-27 16:24:16 PDT
(In reply to
comment #2
)
> (From update of
attachment 235584
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=235584&action=review
> > I'm not clear if this makes sense to be on the WKContentView. I believe there are some PDF related issues with that. I need to check with Tim/Andy. >
I checked with Tim, and this is not an issue in this case. The problem was depending on WKContentView to always be parented (which in the PDF case it is not), but since we don't care about parentage in this case, it doesn't matter. r=me.
Gavin Barraclough
Comment 5
2014-07-27 16:37:42 PDT
Fixed in
r171663
.
Tim Horton
Comment 6
2014-07-27 18:00:06 PDT
Probably at some point we should move those notification listeners to WKWebView, but not today. I think this is fine.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug